# cd4py-swift

./: .gitignore  LICENSE  README.md  pyproject.toml
src/cd4py_swift/: __init__.py  __main__.py
src/cd4py_swift/cli/: __init__.py  cmd_dataset.py  cmd_swift.py
src/cd4py_swift/core/: __init__.py  dedup.py  knn.py  tokenizer.py  vectorizer.py
